--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,11 +16,6 @@ body {
   align-items: center;
 }
 
-body.dark {
-  background-color: #1a202c;
-  color: #cbd5e0;
-}
-
 #root {
   display: flex;
   flex-direction: column;
@@ -39,10 +34,6 @@ header {
   height: 100%;
   display: flex;
   flex-direction: column;
-}
-
-body.dark .App {
-  background: #2d3748;
 }
 
 .chat-container {
@@ -85,8 +76,8 @@ form {
   border-radius: 0 0 0.5rem 0.5rem;
 }
 
-body.dark form {
-  border-top: 1px solid #4a5568;
+.space-x-2 > :not(:first-child) {
+  margin-left: 0.5rem;
 }
 
 textarea {
@@ -101,11 +92,6 @@ select {
   border: 1px solid #d1d5db;
   border-radius: 0 0.5rem 0.5rem 0;
   background: white;
-}
-
-body.dark select {
-  background: #4a5568;
-  color: white;
 }
 
 button {
@@ -132,7 +118,7 @@ button:hover {
 .loading-indicator .dot {
   width: 8px;
   height: 8px;
-  margin: 0 2px;
+  margin: 0 4px;
   background: #007bff;
   border-radius: 50%;
   animation: loading 0.6s infinite alternate;
@@ -159,6 +145,27 @@ button:hover {
   max-width: 100%;
   height: auto;
   border-radius: 0.5rem;
+}
+
+.markdown-container {
+  position: relative;
+}
+
+.copy-button {
+  position: absolute;
+  top: -.9rem;
+  right: -0.8rem;
+  background: none;
+  color: white;
+  border: none;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.copy-button:hover {
+  color: #0056b3;
 }
 
 ::-webkit-scrollbar {
