--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,6 +76,10 @@ form {
   border-radius: 0 0 0.5rem 0.5rem;
 }
 
+.space-x-2 > :not(:first-child) {
+  margin-left: 0.5rem;
+}
+
 textarea {
   flex: 1;
   padding: 0.5rem;
@@ -94,15 +98,15 @@ button {
   margin-left: 1rem;
   padding: 0.5rem 1rem;
   border: none;
-  background: #007bff;
-  color: white;
+  background: transparent;
+  color: silver;
   border-radius: 0.5rem;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 button:hover {
-  background: #0056b3;
+  background: white;
 }
 
 .loading-indicator {
@@ -141,6 +145,27 @@ button:hover {
   max-width: 100%;
   height: auto;
   border-radius: 0.5rem;
+}
+
+.markdown-container {
+  position: relative;
+}
+
+.copy-button {
+  position: absolute;
+  top: -.5rem;
+  right: -0.4rem;
+  background: none;
+  color: white;
+  border: none;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.copy-button:hover {
+  color: #0056b3;
 }
 
 ::-webkit-scrollbar {
